sf-metadata/force-app/main/default/objects/Stripe_Quote_Line__c/Stripe_Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Stripe Quote Line</label>
    <nameField>
        <displayFormat>SQL-{0000}</displayFormat>
        <label>Stripe Quote Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>