sf-metadata/force-app/main/default/objects/Stripe_Quote_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stripe Quote Lines</relationshipLabel>
    <relationshipName>Stripe_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>