sf-metadata/force-app/main/default/objects/Stripe_Quote_Line__c/fields/Stripe_Price_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Price_ID__c</fullName>
    <label>Stripe Price ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>