sf-metadata/force-app/main/default/objects/Stripe_Quote_Line__c/fields/Stripe_Quote__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Quote__c</fullName>
    <label>Stripe Quote</label>
    <referenceTo>Stripe_Quote__c</referenceTo>
    <relationshipLabel>Stripe Quote Lines</relationshipLabel>
    <relationshipName>Stripe_Quote_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>